--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../dist/css/style.css" />
+    <link rel="stylesheet" href="../dist/css/styles.css" />
     <script src="../dist/js/index.js" defer></script>
     <title>E-commerce Page| Frontend mentor challenge</title>
   </head>
   <body>
+    <div class="image-modal">
+      <div
+        class=" bg-white w-1/3 h-max mx-auto mt-[5%] shadow-md rounded-lg relative image-container"
+      >
+        <button type="button" class="btn-left">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.75 19.5L8.25 12l7.5-7.5"
+            />
+          </svg>
+        </button>
+        <button type="button" class="btn-right">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+          </svg>
+          
+          </svg>
+        </button>
+        <img
+          src=""
+          alt=""
+          class="w-full h-auto rounded-lg modal-image"
+        />
+      </div>
+    </div>
     <header
       class="max-w-6xl mx-auto px-6 h-24 flex items-center gap-9 border-b border-solid border-gray-200"
     >
@@ -66,7 +100,8 @@
             <img
               src="../dist/img/shoes_1.png"
               alt="Nike sneakers"
-              class="block w-full h-auto aspect-square md:rounded-2xl"
+              class="block w-full h-auto aspect-square md:rounded-2xl cursor-pointer"
+              id="main-image"
             />
           </div>
           <!-- OTHER PRODUCT PHOTOS -->
